[package]
name = "kooche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "koochelib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/main.rs"

[dependencies]
axum = {version="0.5.17",features=["multipart","headers"]}
tokio = {version="1.22.0", features=["full"]}
redis = {version = "0.22.1", features = ["tokio-comp"] }
mongodb = {version="2.3.1", default-features=false, features=["sync"]}
serde = {version = "1.0.147", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["limit"] }
serde_json = "1.0.89"
rand = "0.8.5"
chrono = "0.4.23"
jsonwebtoken = "8.1.1"
dotenv = "0.15.0"
bcrypt = "0.13.0"
reqwest = {version="0.11.13",features=["json","blocking"]}
regex = "1.7.0"